test/files/neg/gadts1.check
gadts1.scala:20: error: Test.Cell[a] does not take parameters
    case Cell[a](x: Int) => c.x = 5
                ^
gadts1.scala:20: error: type mismatch;
 found   : 5.type (with underlying type Int)
 required: a
    case Cell[a](x: Int) => c.x = 5
                                  ^
two errors found
